<!--<?xml version="1.0" encoding="utf-8"?>-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <!--系统************************************-->
    <string name="system_app_name">智能花箱</string>
    <string name="system_titleBarTxt">@string/system_app_name</string>

    <string name="system_title_alert">提示信息</string>
    <string name="system_ok">确定</string>
    <string name="system_cancel">取消</string>
    <string name="system_yes">是</string>
    <string name="system_no">否</string>
    <string name="system_connectserver_failurestate_txt">连接服务器失败</string>
    <!--控件-->
    <string name="system_listfooterview_nomore">没有了</string>
    <string name="system_listfooterview_normal">查看更多</string>
    <string name="system_listfooterview_ready">松开载入更多</string>
    <!--控件-->

    <!--文件选择-->
    <string name="system_selectfile_title">选择文件</string>
    <string name="system_selectfile_createdefaultdir_failure_txt">创建默认目录失败</string>
    <string name="system_selectfile_cannot_deletedir_txt">不能删除目录</string>
    <!--文件选择-->

    <!--蓝牙连接-->
    <string name="system_bluetooth_openbluetooth_txt">打开蓝牙</string>
    <string name="system_bluetooth_searchbluetooth_txt">搜索</string>
    <string name="system_bluetooth_connect_title">连接设备</string>
    <string name="system_bluetooth_havedpairdevice">已配对设备</string>
    <string name="system_bluetooth_discovery_title">选择蓝牙设备</string>
    <string name="system_bluetooth_open_txt">请先打开蓝牙</string>
    <string name="system_bluetooth_connect_success_txt">蓝牙连接成功</string>
    <string name="system_bluetooth_connect_failure_txt">蓝牙连接失败</string>
    <string name="system_device_connect_success_txt">连接设备成功</string>
    <string name="system_device_connect_failure_txt">连接设备失败</string>
    <!--蓝牙连接-->

    <!--帮助-->
    <string name="system_aboutsoft_help">帮助</string>
    <string name="system_help_title">帮助文档</string>
    <string name="system_help_content">

    </string>
    <!--帮助-->

    <!--关于-->
    <string name="system_device_softversion">设备版本</string>
    <string name="system_aboutsoft_softversion">软件版本</string>
    <string name="system_aboutsoft_checkversion">检查新版本</string>
    <string name="system_aboutsoft_copyright">软件版权</string>
    <!--关于-->

    <!--语言选择-->
    <string name="system_selectlanguage_title">语言选择</string>
    <string name="system_selectlanguage_auto">跟随系统</string>
    <string name="system_selectlanguage_chinese_simplified">简体中文</string>
    <string name="system_selectlanguage_english">English</string>
    <!--语言选择-->

    <!--选择文件-->
    <string name="system_selectfiles_title">选择文件</string>



    <!--主界面-->
    <string-array name="bottom_title">
        <item>植物</item>
        <item>天气</item>
        <item>资料</item>
        <item>我的</item>
    </string-array>
    <string name="press_again">再按一次返回键退出</string>

    <!--个人信息中心-->
    <string name="mine_company_name">公司名</string>
    <string name="mine_city_name">城市</string>
    <string name="about_company">关于公司</string>
    <string name="change_password">修改密码</string>
    <string name="user_manual">用户手册</string>
    <string name="change_language">语言</string>
    <string name="title_change_language">切换语言</string>
    <string name="chinese_language">简体中文</string>
    <string name="english_language">English</string>

    <!--天气模块-->
    <string name="unknown">未知</string>
    <string name="refresh">刷新</string>
    <string name="temp_range" translatable="false"><xliff:g example="1.5" id="lower">%1$s</xliff:g>℃ ~ <xliff:g example="2.8" id="upper">%2$s</xliff:g>℃</string>

    <!--植物种类页面-->
    <string name="search">搜索</string>

    <!--植物界面-->
    <string name="list">列表</string>
    <string name="map">地图</string>
    <string name="all_plants">全部节点</string>
    <string name="good">良好</string>
    <string name="normal">一般</string>
    <string name="bad">异常</string>
    <string name="title_water_name">浇灌名称:</string>
    <string name="title_switch">开关:</string>
    <string name="title_no_choose">未选择</string>
    <string name="title_no_switch_choose">请选择开关</string>

    <!--欢迎界面-->
    <string name="splash_btn_sure">确认</string>
    <string name="splash_title">请选择版本</string>

    <!--登陆模块-->
    <string name="save_password">记住密码</string>
    <string name="login">登录</string>
    <string name="hint_login_username">账号</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_company_code">公司编号</string>
    <string name="username_requires">帐号不能为空</string>
    <string name="password_requires">密码不能为空</string>
    <string name="companycode_requires">公司编号不能为空</string>
    <string name="warm_prompt">温馨提示：</string>
    <string name="waiting">正在访问网络，请稍候&#8230;</string>
    <string name="NoNetwork">网络连接不可用，请稍后再试</string>
    <string name="login_failure">登录失败，请重试</string>

    <!--网络模块-->
    <string name="none">无</string>
    <string name="WIFINetwork">WIFI网络</string>
    <string name="MobileNetwork">移动网络</string>

    <!--个人头像模块-->
    <string-array name="getPhotos">
        <item>拍照</item>
        <item>相册</item>
    </string-array>

    <!--选择文件-->
    <!--系统***********************-->

    <!--产品****************************************************-->
    <!--主页面-->

    <!--主页面-->

    <!--产品**************************-->

</resources>
